--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @post.title %></h1>
 
-<!-- Add code here to link to the post's category. -->
+<div><%= link_to @post.category.name, category_path(@post.category) %></div>
 
 <p><%= @post.description %></p>
